--- a/DesktopIntegrador/src/main/java/View/AccessAsist.form
+++ b/DesktopIntegrador/src/main/java/View/AccessAsist.form
@@ -100,7 +100,6 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="1" position="2" title="ASISTENTE">
-              <Border PropertyName="innerBorder" info="null"/>
               <Font PropertyName="font" name="Dialog" size="10" style="0"/>
               <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
             </TitledBorder>
@@ -110,6 +109,11 @@
           <Dimension value="[150, 40]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tFieldUserFocusGained"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tFieldUserKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tFieldUserKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnAceptar">
       <Properties>
@@ -154,7 +158,6 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="1" position="2" title="CONTRASE&#xd1;A">
-              <Border PropertyName="innerBorder" info="null"/>
               <Font PropertyName="font" name="Dialog" size="10" style="0"/>
               <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
             </TitledBorder>
