--- a/DesktopIntegrador/src/main/java/View/DirectionMan.form
+++ b/DesktopIntegrador/src/main/java/View/DirectionMan.form
@@ -446,7 +446,7 @@
         <Component class="javax.swing.JButton" name="jbtnSearchCity">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/add.png"/>
+              <Image iconType="3" name="/Recursos/add.png"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[40, 40]"/>
@@ -497,7 +497,7 @@
         <Component class="javax.swing.JButton" name="jbtnAyuda">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/info.png"/>
+              <Image iconType="3" name="/Recursos/info.png"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[40, 40]"/>
