--- a/DesktopIntegrador/src/main/java/View/AccessAsist.form
+++ b/DesktopIntegrador/src/main/java/View/AccessAsist.form
@@ -100,6 +100,7 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="1" position="2" title="ASISTENTE">
+              <Border PropertyName="innerBorder" info="null"/>
               <Font PropertyName="font" name="Dialog" size="10" style="0"/>
               <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
             </TitledBorder>
@@ -158,6 +159,7 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="1" position="2" title="CONTRASE&#xd1;A">
+              <Border PropertyName="innerBorder" info="null"/>
               <Font PropertyName="font" name="Dialog" size="10" style="0"/>
               <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
             </TitledBorder>
