--- a/DesktopIntegrador/src/main/java/View/DoctorMan.form
+++ b/DesktopIntegrador/src/main/java/View/DoctorMan.form
@@ -43,12 +43,10 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanelMedico">
       <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="99" type="rgb"/>
-        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="1" position="2" title="DATOS DEL MEDICO">
+              <Border PropertyName="innerBorder" info="null"/>
               <Color PropertyName="color" blue="66" green="66" red="0" type="rgb"/>
             </TitledBorder>
           </Border>
