--- a/DesktopIntegrador/src/main/java/View/HistoricalMan.form
+++ b/DesktopIntegrador/src/main/java/View/HistoricalMan.form
@@ -59,7 +59,7 @@
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="385" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="375" max="32767" attributes="0"/>
                           <Component id="jBtnCancel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                           <Component id="jBtnAccept" min="-2" max="-2" attributes="0"/>
@@ -93,7 +93,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="ACEPTAR"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[100, 35]"/>
+              <Dimension value="[110, 40]"/>
             </Property>
           </Properties>
           <Events>
@@ -107,7 +107,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="CANCELAR"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[100, 35]"/>
+              <Dimension value="[110, 40]"/>
             </Property>
           </Properties>
           <Events>
@@ -116,6 +116,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTFDescription">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
