--- a/DesktopIntegrador/src/main/java/View/MainView.form
+++ b/DesktopIntegrador/src/main/java/View/MainView.form
@@ -1956,7 +1956,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPaneRecursos" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jBtnLlamar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -1974,7 +1974,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jbtnRemovRecurso" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jButton1" alignment="0" max="-2" attributes="0"/>
+                              <Component id="jBtnLlamar" alignment="0" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -2047,8 +2047,11 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnRemovRecursoActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="jButton1">
+                <Component class="javax.swing.JButton" name="jBtnLlamar">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Dialog" size="10" style="0"/>
+                    </Property>
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/Recursos/call.png"/>
                     </Property>
